[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ff-ltitoolkit"
version = "0.1.0"
description = "Framework-agnostic LTI 1.3 Advantage toolkit for Python — connect any app to any LMS."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lti", "lti1.3", "lti-advantage", "lms", "canvas", "moodle", "oidc", "education"]
authors = [{ name = "Faisal Fida" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed",
]

# Pinned deliberately (we own the vendored core, so we control its deps).
# pyjwt[crypto] pulls `cryptography`, required for RS256 sign/verify.
dependencies = [
    "pyjwt[crypto]>=2.8,<3",
    "jwcrypto>=1.5",
    "requests>=2.31",
    "typing_extensions>=4.9",
]

# Runtime extra: consumers who use the FastAPI adapter install `ltitoolkit[fastapi]`.
[project.optional-dependencies]
fastapi = [
    "fastapi>=0.110",
    "itsdangerous>=2.1",      # required by Starlette SessionMiddleware
    "python-multipart>=0.0.9",  # required to read the form-POSTed id_token
]

[project.urls]
Homepage = "https://github.com/CNIT-Organization/ltitoolkit"
Repository = "https://github.com/CNIT-Organization/ltitoolkit"
Issues = "https://github.com/CNIT-Organization/ltitoolkit/issues"

# Dev-only tooling (PEP 735). Not published to consumers; `uv sync` installs it
# by default. Tests exercise the FastAPI adapter, so pull that extra in here.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",  # required by fastapi.testclient.TestClient
    "ff-ltitoolkit[fastapi]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ltitoolkit"]

[tool.hatch.build.targets.sdist]
include = ["src/ltitoolkit", "LICENSE", "README.md"]

# ---------------------------------------------------------------------------
# Tooling — clean defaults
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
# The vendored core is upstream code; lint only our own code.
extend-exclude = ["src/ltitoolkit/core"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
# Don't type-check the vendored core; it has its own (looser) conventions.
exclude = ["src/ltitoolkit/core/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
